# libcryptonight

./: .gitignore  CMakeLists.txt  README.md  cntest.c  cryptonight.c  cryptonight.h  vnsminer.cpp
crypto/: miner.h  oaes_lib.c
cryptonight/: .gitignore
vnsminer/: cntest.c  getwork.json  vnsminer.cpp
vnsminer/crypto/: common.h
